Update fairness box style and mobile appearance

--- a/site/index.html
+++ b/site/index.html
@@ -305,6 +305,54 @@
 </div>
 
 <div class="ab-section">
+    <div class="ab-section-title ab-green"> Getting Started</div>
+        <div class="ab-section-body">
+            <div class="ab-slot-row">
+                   <div class="ab-slot-container">
+                       <div class="ab-slot-machine" data-slot="0">
+                           <img src="assets/SlotMachine.png" alt="Slot Machine" class="ab-slot-img" />
+                           <div class="ab-slot-screen">
+                               <span class="ab-slot-word">Sign Up</span>
+                               <span class="ab-slot-desc">Create your account and claim your welcome bonus (XXX AttraXPoints).</span>
+                           </div>
+                           <div class="ab-slot-popup">
+                               <span class="ab-slot-popup-word">Sign Up</span>
+                               <span class="ab-slot-popup-desc">Create your account and claim your welcome bonus (XXX AttraXPoints).</span>
+                           </div>
+                       </div>
+                   </div>
+                   <div class="ab-slot-container">
+                       <div class="ab-slot-machine" data-slot="1">
+                           <img src="assets/SlotMachine.png" alt="Slot Machine" class="ab-slot-img" />
+                           <div class="ab-slot-screen">
+                               <span class="ab-slot-word">Play</span>
+                               <span class="ab-slot-desc">Try out our flagship Coinflip game, spin the Slots, or test your luck on the Lucky Wheel.</span>
+                           </div>
+                           <div class="ab-slot-popup">
+                               <span class="ab-slot-popup-word">Play</span>
+                               <span class="ab-slot-popup-desc">Try out our flagship Coinflip game, spin the Slots, or test your luck on the Lucky Wheel.</span>
+                           </div>
+                       </div>
+                   </div>
+                   <div class="ab-slot-container">
+                       <div class="ab-slot-machine" data-slot="2">
+                           <img src="assets/SlotMachine.png" alt="Slot Machine" class="ab-slot-img" />
+                           <div class="ab-slot-screen">
+                               <span class="ab-slot-word">Get Points</span>
+                               <span class="ab-slot-desc">Earn AttraXPoints for logging in daily, playing, and climbing the leaderboard.</span>
+                           </div>
+                           <div class="ab-slot-popup">
+                               <span class="ab-slot-popup-word">Get Points</span>
+                               <span class="ab-slot-popup-desc">Earn AttraXPoints for logging in daily, playing, and climbing the leaderboard.</span>
+                           </div>
+                       </div>
+                   </div>
+            </div>
+            <div class="ab-slot-below">Stay tuned – more rewards, perks, and surprises are coming soon.</div>
+        </div>
+</div>
+
+<div class="ab-section">
     <div class="ab-section-title ab-green"> What’s Inside</div>
     <div class="ab-section-body">
         <ul class="ab-fairness-list">
@@ -313,18 +361,6 @@
             <li>How AttraXPoints work and what rewards they unlock</li>
             <li>Our fairness system powered by Proof of Play</li>
             <li>Roadmap, FAQs, and more</li>
-        </ul>
-    </div>
-</div>
-
-<div class="ab-section">
-    <div class="ab-section-title ab-green"> Getting Started</div>
-    <div class="ab-section-body">
-        <ul class="ab-fairness-list">
-            <li>Sign up – create your account and claim your welcome bonus (XXX AttraXPoints).</li>
-            <li>Play – try out our flagship Coinflip game, spin the Slots, or test your luck on the Lucky Wheel.</li>
-            <li>Collect points – earn AttraXPoints for logging in daily, playing, and climbing the leaderboard.</li>
-            <li>Stay tuned – more rewards, perks, and surprises are coming soon.</li>
         </ul>
     </div>
 </div>
